# Khaled-Houda-Portfolio

./: .gitignore  Assert  README.md  assertExample2  main
C-Go-and-Cpp-AComprehensiveIntroductiontoProgrammingSpecialization/: .gitignore  ADT-Stack  ignore.gitignore  main  structAssignmentProject  structs  structs1
C-Go-and-Cpp-AComprehensiveIntroductiontoProgrammingSpecialization/Module2/Week1/: Assert.c  assertExample2.c  main.c  preprocessor code  preprocessor code.c
C-Go-and-Cpp-AComprehensiveIntroductiontoProgrammingSpecialization/Module2/Week2/: structAssignmentProject.c  structs2.c
C-Go-and-Cpp-AComprehensiveIntroductiontoProgrammingSpecialization/Module2/Week3/: 1ElementLists.c  advancedIO.c  atom_list_printer.c  fullList.c
C-Go-and-Cpp-AComprehensiveIntroductiontoProgrammingSpecialization/Module2/Week4/: double_spacing.c  file_IO.c  rational_numbers_assignment.c
C-Go-and-Cpp-AComprehensiveIntroductiontoProgrammingSpecialization/Week2/: ADT-Stack.c  structs1.c
Software_Modelling_of_Electronic_Systems/: CMakeLists.txt
Software_Modelling_of_Electronic_Systems/E1/: CMakeLists.txt
Software_Modelling_of_Electronic_Systems/E1/src/: first.cpp  second.cpp
Software_Modelling_of_Electronic_Systems/E1/src/EDA1/: design.cpp  testbench.cpp
Software_Modelling_of_Electronic_Systems/E1/src/EDA2/: Counter.h  testbench.cpp
Software_Modelling_of_Electronic_Systems/E2/: CMakeLists.txt  pointers.cpp  templates.cpp
Software_Modelling_of_Electronic_Systems/Extra_Practice/Chap2.1/: CMakeLists.txt  mittelwert.h
Software_Modelling_of_Electronic_Systems/Extra_Practice/Chap2.1/testbench/: testbench.cpp  testbench.h
